Added most of the functionality of the app

--- a/home/Symptoms-UI/angular.json
+++ b/home/Symptoms-UI/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Symptoms-UI"
+    }
+  },
+  "defaultProject": "Symptoms-UI",
+  "cli": {
+    "analytics": "4680bdd1-f05f-449a-8385-d5c1feafd577"
+  }
 }
